syntax = "proto3";
option java_generic_services = true;
option java_package = "com.nulpointerexception.server.proto";

package proto;

service SignUpService {
    rpc signUp(UserData) returns (SignUpResponse){}
}

message UserData {
    string username = 1;
    int32 password = 2;
}

message SignUpResponse {
    string result = 1;
}


